# hato

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  diesel.toml  shippable.yml
.cargo/: config
migrations/2018-10-16-160002_create_repo_table/: down.sql  up.sql
migrations/2018-10-17-062547_create_repos/: down.sql  up.sql
migrations/2018-12-23-061843_create_user/: down.sql  up.sql
script/: docker-compose.yml
script/docker-in-docker/: docker-compose.yml
script/postgres/: docker-compose.yml
specs/: README.md
src/: cli.yaml  config.rs  error.rs  main.rs  router.rs
src/agent/: cli.yaml  main.rs
src/api/: mod.rs  repo.rs  webhook.rs
src/builder/: common.rs  docker.rs  git.rs
src/common/: mod.rs
src/db/: mod.rs  schema.rs
src/handler/: repo.rs
src/model/: mod.rs
src/repos/: mod.rs
src/server/: cli.yaml  config.rs  errors.rs  main.rs  router.rs  utils.rs
src/server/api/: build.rs  mod.rs  repo.rs  user.rs  webhook.rs
src/server/builder/: common.rs  docker.rs  mod.rs
src/server/common/: mod.rs
src/server/db/: mod.rs  schema.rs
src/server/handler/: build.rs  repo.rs  user.rs
src/server/middleware/: auth.rs
src/server/model/: build.rs  mod.rs  perm.rs  proc.rs  registry.rs  repo.rs  team.rs  user.rs
